--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,9 @@
         "plugin:react/recommended",
         "plugin:prettier/recommended"
     ],
-
+    "globals": {
+        "global": true
+    },
     "overrides": [
     ],
     "parserOptions": {
@@ -21,5 +23,10 @@
     ],
     "rules": {
         "react/react-in-jsx-scope": "off"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
